# wiphy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ip/: CMakeLists.txt
scripts/: synchronization.gtkw  transform_butterfly.gtkw  transform_primary.gtkw  transform_stage.gtkw  wiphy_ip.tcl
scripts/zed/: system_bd.tcl  system_project.tcl  zed_system_bd.tcl
sim/: CMakeLists.txt  channel.hpp  cordic.cpp  cordic.hpp  fixed.hpp  preamble.cpp  preamble.hpp  synchronization.hpp  transform.cpp  transform.hpp  wiphy.cpp  wiphy.hpp  wiphy_sim.cpp
sim/test/: CMakeLists.txt  cordic_test.cpp  synchronization_test.cpp  transform_test.cpp
src/: CMakeLists.txt  autocorrelation.sv  broadcast.sv  cartesian_to_polar.sv  combine.sv  complex_conjugate.sv  complex_magnitude_squared.sv  complex_moving_sumation.sv  complex_multiply.sv  complex_multiply_compact.sv  complex_saturate.sv  control.sv  frequency_correction.sv  memory.sv  moving_sumation.sv  rotate.sv  saturate.sv  shift_register_memory.sv  synchronization.sv  transform.sv  transform_butterfly.sv  transform_primary.sv  transform_stage.sv  window_energy.sv  wiphy.v
src/tb/: CMakeLists.txt  cartesian_to_polar_tb.sv  complex_magnitude_squared_tb.sv  complex_multiply_compact_tb.sv  complex_multiply_tb.sv  rotate_tb.sv  transform_butterfly_tb.sv  transform_primary_tb.sv  transform_stage_tb.sv  transform_tb.sv  wiphy_tb.sv
src/zed/: CMakeLists.txt  system_constr.xdc  system_top.v  zed_system_constr.xdc
